--- a/test/test.html
+++ b/test/test.html
@@ -101,6 +101,11 @@
 
 <div id = "page2"></div>
 
+<br>
+<h1>Menu</h1>
+
+<div id ="menu"></div>
+
 </body>
 <script>
     $(function(){
@@ -134,14 +139,23 @@
         var page1 = S3.page(container, function(page){
                     console.log('正在加载第'+page+'页的数据');
                 }, {
-            currentpage:4,pagecount:20,
+            currentpage:4,pagecount:20
         });
         var container2 = document.getElementById("page2");
         var page2 = S3.page(container2, function(page){
             console.log('这是第二个页码的打印数据，正在加载'+page+'页的数据');
         }, {
-            currentpage:6,pagecount:20,
+            currentpage:6,pagecount:20
         });
+
+        var menu = [
+            {title:'title1',
+                content:["content1","content2","contetn3"]},
+            {title:'title2',
+                content:["content2","content2","contetn3"]},
+        ];
+        S3.menu.renderMenu(menu,function(e){console.log("点击了"+e)},"menu");
+
         S3.eventManager.init();
     });
     function hello(element){
