--- a/test/test.html
+++ b/test/test.html
@@ -152,7 +152,7 @@
             {title:'title1',
                 content:["content1","content2","contetn3"]},
             {title:'title2',
-                content:["content2","content2","contetn3"]},
+                content:["content2","content2","contetn3"]}
         ];
         S3.menu.renderMenu(menu,function(e){console.log("点击了"+e)},"menu");
 
