--- a/test/calculatorDemo.html
+++ b/test/calculatorDemo.html
@@ -2,82 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>S3.cal使用样例</title>
     <script src ="../js/jquery.min.js"></script>
     <script src = "../dist/S3ToolBox.js"></script>
 </head>
 <body>
-
 <div>
-    <h1>json2form</h1>
-    <button id='json2form'>json2form</button>
-    <button id='form2jsom'>form2jsom</button>
-    <button id='clearForm'>clearForm</button>
-    <form id = "formid">
-        <input type = "text" name="name1" >
-        <input name ="name2" type = "numver">
-        <input name = "name3" type = "checkbox" value ="aaaa">aaaa
-        <input name = "name3" type ="checkbox" value ="aaab">aaab
-        <input name = "name3" type ="checkbox" value ="aaac">aaac
-
-        <input name = "name4" type = "radio" value ="aaaa">aaaa
-        <input name = "name4" type ="radio" value = "aaab">aaab
-        <input name = "name4" type ="radio" value = "aaac">aaac
-        <select name = "name5">
-                <option value="aaaa">
-                    haha
-                </option>
-                <option value ="bbbb">
-                    hehe
-                </option>
-                <option value ="keke">
-                    keke
-                </option>
-        </select>
-        <select name = "name6" multiple>
-            <option value="aaaa">
-                haha
-            </option>
-            <option value ="bbbb">
-                hehe
-            </option>
-            <option value ="keke">
-                keke
-            </option>
-        </select>
-    </form>
-</div>
-
-
-<div>
-    <h1>template</h1>
-    <div id = "temp"></div>
-</div>
-<script type="text/html" id = "template">
-    <div>
-        <h6><%= data.title%></h6>
-        <ul>
-            <%
-            var list = data.list;
-            for(var i=0;i<list.length;i++){
-            %>
-            <li>
-                <%= list[i]%>
-            </li>
-            <% } %>
-        </ul>
-    </div>
-</script>
-
-<h1>eventManager</h1>
-<button click = "hello">say hello</button>
-<input type = "text" focus = "focus()">
-
-
-<h1>calculator</h1>
-
+<h1>S3.cal使用样例</h1>
 <p>四则运算</p>
-<p>   add: 加法add(a,b)   //a+b</p>
+<p>add:加法add(a,b)   //a+b</p>
 <p>    sub: 减法sub(a,b)   //a-b</p>
 <p>   mul: 乘法 mul(a,b)</p>
 <p>    div: 除法  div(a,b)</p>
@@ -93,24 +26,6 @@
 <p>   arrAddNum: arrAddNum(a,n)   //a[i]+n  ---b[i]</p>
 <p>   arrSubNum: arrSubNum(a,n)</p>
 <p>    arrMulNum: arrMulNum(a,n)</p>
-
-
-
-<h1>Page</h1>
-<div id = "page"></div>
-
-<div id = "page2"></div>
-
-<br>
-<h1>Menu</h1>
-
-<div id ="menu"></div>
-
-<h1>Tables表单</h1>
-<button id="maketable">make table</button>
-<button id="renderdata">render data</button>
-<button id="makehead">make head</button>
-<div id = 'table1'>
 </div>
 <script>
     $(function(){
@@ -131,7 +46,7 @@
             S3.form.clearForm(form);
         });
         $('#form2jsom').on("click",function(){
-            console.log(S3.form.form2json(form));
+           console.log(S3.form.form2json(form));
         });
 
         //template
@@ -142,8 +57,8 @@
 
         var container = document.getElementById("page");
         var page1 = S3.page(container, function(page){
-            console.log('正在加载第'+page+'页的数据');
-        }, {
+                    console.log('正在加载第'+page+'页的数据');
+                }, {
             currentpage:4,pagecount:20
         });
         var container2 = document.getElementById("page2");
@@ -226,6 +141,5 @@
     function focus(){
         console.log("focus")
     }
-</script>
-</body>
+</script></body>
 </html>
