--- a/test/validateDemo.html
+++ b/test/validateDemo.html
@@ -5,7 +5,7 @@
     <meta charset ="UTF-8">
     <title>validateDemo</title>
     <script src ="../js/jquery.min.js"></script>
-    <script src = "../dist/S3ToolBox.js"></script>
+    <script src = "../dist/S3ToolBox.min.js"></script>
 </head>
 
 <style>
