s3.element.makeElement 改为 s3.element.make

--- a/test/elementDemo.html
+++ b/test/elementDemo.html
@@ -37,7 +37,7 @@
         var html = ul.render();
 
 
-        var ul2 = el.makeElement(
+        var ul2 = el.make(
                 {
                     tagName:'ul',
                     props:{id:'list'},
